2008-04-17  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/crm.el (crm-completion-help, crm-complete)
	(crm-complete-word, crm-complete-and-exit): Fix typo in previous change.

2008-04-17  Kenichi Handa  <handa@m17n.org>

	* international/characters.el: Don't make the width of U+00AD to 0.

2008-04-17  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-stack-update): New variable.
	(gdb, gdb-starting, gdb-frames-mode): Use it.
	(gdb-invalidate-frames): Advise to call "info stack" only if
	execution has occurred.
	(gdb-info-breakpoints-custom): Only update overlay-arrow pointing to
	selected frame if no execution has occurred.
	(gdb-frames-force-update): New interactive function.
	(gdb-frames-mode-map): Bind it to "F".

2008-04-17  Michael Olson  <mwolson@gnu.org>

	* textmodes/remember.el (remember-version): Release Remember 2.0.

2008-04-16  Yoni Rabkin  <yoni@rabkins.net>

	* textmodes/artist.el:
	* progmodes/vhdl-mode.el:
	* progmodes/verilog-mode.el:
	* progmodes/vera-mode.el:
	* progmodes/simula.el:
	* progmodes/ps-mode.el:
	* progmodes/cmacexp.el:
	* obsolete/hilit19.el:
	* emulation/viper.el:
	* ediff.el: Cleanup the bug-report email addresses and make sure the
	maintainer is still willing to handle bug reports.

2008-04-16  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc.el (vc-dir-kill-query): Fix thinko.

2008-04-16  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (diary-remind): Don't clobber `date' passed
	by diary-sexp-entry.

2008-04-16  Markus Triska  <markus.triska@gmx.at>

	* proced.el (proced-command-alist): Add support for darwin.

2008-04-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* proced.el (proced-mode): Redefine as just the major-mode.
	(proced): Separate it from proced-mode.

	* vc.el: Rename vc-status to vc-dir and the vc-status var to vc-ewoc.

2008-04-15  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* whitespace.el: Honor the `indent-tabs-mode' setting from user.